logs/sofine.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sofine'...
Listing './lib/python3.5/site-packages/sofine/data_format_plugins'...
Listing './lib/python3.5/site-packages/sofine/lib'...
Listing './lib/python3.5/site-packages/sofine/lib/utils'...
Listing './lib/python3.5/site-packages/sofine/plugins'...
Listing './lib/python3.5/site-packages/sofine/plugins/example'...
Compiling './lib/python3.5/site-packages/sofine/plugins/example/fidelity.py'...
***   File "./lib/python3.5/site-packages/sofine/plugins/example/fidelity.py", line 108
    except HTTPError, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sofine/plugins/example_http'...
Listing './lib/python3.5/site-packages/sofine/plugins/mock'...
Listing './lib/python3.5/site-packages/sofine/plugins/mock_http'...
Listing './lib/python3.5/site-packages/sofine/plugins/standard'...
Compiling './lib/python3.5/site-packages/sofine/plugins/standard/file_source.py'...
***   File "./lib/python3.5/site-packages/sofine/plugins/standard/file_source.py", line 88
    print "Invalid argument error."
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sofine/runner.py'...
***   File "./lib/python3.5/site-packages/sofine/runner.py", line 414
    print data_format_plugin.serialize(ret)
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sofine/tests'...
Listing './lib/python3.5/site-packages/sofine-0.2.4.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
